--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,38 @@
   text-align: center;
 }
 
-.App-logo {
+.App-timer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #41454d;
   height: 40vmin;
+  width: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.App-play {
+  height: 24vmin;
+  pointer-events: none;
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+} */
+
+.App-nav {
+  background-color: #41454d;
+  min-height: 6vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-header {
@@ -25,14 +48,14 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #fb8561;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
