--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,29 @@
   color: white;
 }
 
-.App-link {
-  color: #fb8561;
+.App-btn {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  /* tudo isso de cima é para limpar o padrão */
+  transition-duration: 0.4s;
+  width: 15vmin;
+  height: 8vmin;
+}
+
+.App-btn:hover {
+  color: rgb(234, 108, 108);
+}
+
+.Align-Line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 /* @keyframes App-logo-spin {
