--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,6 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
 .App-nav {
   background-color: #41454d;
   min-height: 6vh;
@@ -76,11 +70,42 @@
   justify-content: center;
 }
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.Dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.Drop-btn {
+  background-color: #3b69c5;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.Drop-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.Drop-option {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.Drop-option:hover {background-color: #f1f1f1}
+
+.Dropdown:hover .Drop-content {
+  display: block;
+}
+
+.Dropdown:hover .Drop-btn {
+  background-color: #3e8e41;
+}
