--- a/src/App.css
+++ b/src/App.css
@@ -71,15 +71,15 @@
 }
 
 .Dropdown {
+  background-color: #41454d;
   position: relative;
   display: inline-block;
+  width: 40vmin;
 }
 
 .Drop-btn {
-  background-color: #3b69c5;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  font-size: calc(10px + 2vmin);
   border: none;
   cursor: pointer;
 }
@@ -88,7 +88,7 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  width: 40vmin;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -106,6 +106,6 @@
   display: block;
 }
 
-.Dropdown:hover .Drop-btn {
+.Dropdown:hover {
   background-color: #3e8e41;
 }
